--- a/skill.html
+++ b/skill.html
@@ -13,6 +13,13 @@
     <meta property="og:description"
         content="Learn about Sudam Shrestha's technical skills and expertise in web development. From PHP and Laravel to Vue.js and Tailwind CSS, explore the skills that define my approach to building web applications.">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/skill">
+    <meta property="og:site_name" content="Sudam Shrestha" />
+    <link rel="canonical" href="https://www.sudamshrestha.com.np" />
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="robots" content="index, follow">
+    
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
