--- a/project.html
+++ b/project.html
@@ -15,6 +15,13 @@
     <meta property="og:image" content="https://www.sudamshrestha.com.np/images/hero.webp">
     <meta property="og:url" content="https://www.sudamshrestha.com.np/project">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Sudam Shrestha" />
+    <link rel="canonical" href="https://www.sudamshrestha.com.np" />
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="robots" content="index, follow">
+    
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
